# silmari-af-deep-research

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  research_completed_event.py
skills/search/: __init__.py  errors.py
tests/: conftest.py
tests/pipeline/: conftest.py  test_zero_capability.py  test_zero_source_gate_closure.py
tests/producer/: conftest.py  test_research_completed_event.py  test_research_event_contract.py
tests/producer/fixtures/: terminal_execution.json
tests/search/: test_error_classification.py  test_search_fallback.py  test_search_web_for_content.py
tests/ui/: _helpers.py  conftest.py  test_app_factory.py  test_auth_redirect.py  test_context.py  test_create_reel_route.py  test_gateway_identity.py  test_gateway_trust.py  test_identity.py  test_legacy_import.py  test_migration.py  test_ports_contract.py  test_reel_job_ports.py  test_reel_status_route.py  test_reel_ui.py  test_research_run.py  test_routes.py  test_scaffold.py  test_standalone_handler_disabled.py
thoughts/searchable/shared/plans/: 2026-07-20-09-46-tdd-search-provider-failclosed.md
thoughts/searchable/shared/research/: 2026-07-20-09-28-search-provider-failclosed.closure-adapter.py  2026-07-20-09-28-search-provider-failclosed.md
thoughts/searchable/shared/reviews/: 2026-07-20-review-search-provider-failclosed.md
ui/: .dockerignore  Dockerfile  app.py  config.json  defaults.json  index.html  launch_adapter.py  legacy_import.py  login.html  server.py
ui/config/: tenancy.json
ui/tenancy/: context.py  fakes.py  identity.py  ports.py
ui/workspace/: dto.py  fakes.py  ports.py  reel_job.py  research_run.py
ui/workspace/postgres/: __init__.py  migrate.py  readiness.py  reel_job_repository.py  repository.py  schema.sql  test_execution_id_unique.py
