[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "af-deep-research"
version = "0.1.0"
description = "AI-powered deep research agent with real-time streaming"

authors = [{ name = "Agent Field", email = "research@agentfield.ai" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "agentfield",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "fastapi",
    "uvicorn",
    "requests>=2.28",
    "pydantic>=2.0",
    "litellm",
    "psutil",
    "PyYAML>=6.0",
    "aiohttp>=3.8",
    "websockets",
    "backoff",
    "psycopg[binary]",
    "flask",
    "flask-cors",
    "supertokens-python",
    "markdown",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "hypothesis>=6.0.0", "black>=22.0.0", "flake8>=5.0.0", "mypy>=0.991"]

[project.urls]
Homepage = "https://github.com/Agent-Field/af-deep-research"
Repository = "https://github.com/Agent-Field/af-deep-research.git"
Issues = "https://github.com/Agent-Field/af-deep-research/issues"

# NOTE: `include = ["agent*"]` matches NO packages in this fork (leftover from the
# upstream af-deep-research layout). So `pip install -e .` installs the declared
# dependencies but does NOT install the local packages (skills, reasoners) or root
# modules (main, temporal_context, doc_generation_pipeline). Imports work because
# the Dockerfile sets PYTHONPATH=/app. If you ever run outside that image, either
# set PYTHONPATH=. or fix this to `include = ["skills*", "reasoners*"]` (+ py_modules
# for the root modules).
[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: requires an external Postgres via TEST_DATABASE_URL (deselect with -m 'not integration')",
]
